https/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: geoip-https-svc
  namespace: osg-services
spec:
  selector:
    k8s-app: geoip-https
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
